# 2courseCppExpression

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: Expression.h  Parser.h  Token.h
src/: BinaryExpression.cpp  ConstantExpression.cpp  MonoExpression.cpp  Optimization.cpp  Parser.cpp  Token.cpp  VarExpression.cpp
tests/: testDiff.cpp  testEval.cpp  testInput.cpp
